#16 Web app made mobile friendly

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 
 <body>
@@ -49,11 +51,11 @@
       <div class="indeterminate"></div>
   </div>
             <a class="brand-logo hide-on-med-and-down left">
-                <a href = "/"><img src="{% static '/img/mythical-large.png' %}" height="8%" width="8%" style="padding:4px;padding-left: 30px" /></a>
+              <img src="{% static '/img/mythical-large.png' %}" height="8%" width="8%" style="padding:4px;padding-left: 30px" />
             </a>
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="large material-icons">menu</i></a>
             <a class="brand-logo hide-on-large-only right">
-                <a href = "/"><img src="{% static '/img/mythical-large.png' %}" height="50px" width="40px" style="padding-top:8px;"/></a>
+               <img src="{% static '/img/mythical-large.png' %}" height="50px" width="40px" style="padding-top:8px;"/>
             </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/about">About</a></li>
