--- a/home/templates/home/main_home.html
+++ b/home/templates/home/main_home.html
@@ -9,14 +9,14 @@
     {% block largepagecontent %}
     <div class="row black" style="color: white; padding-bottom: 50px;">
         <div style="padding: 5%;">
-            <div class="col s6 m12 l6 flow-text">
+            <div class="col s12 m12 l6 flow-text">
                 <b><p style="font-size: 42px;">Built to encourage reading</p></b>
                 <p style="font-size: 24px;">Mythical Learning provides a platform for developers to read source code according to their choice in quick and in efficient way. With our site anyone can learn, develop and its all free.</p>
             </div>
             <div class="col s6 flow-text hide-on-med-and-down left">
                 <center><p style="font-size: 32px;">Still Developing !</p></center>
             </div>
-            <div class="hide-on-large-only center">
+            <div class="hide-on-large-only center m12">
             <a href="/signup" class="btn-large">Sign Up</a>
             </div>
         </div>
@@ -24,10 +24,10 @@
     <br><br>
     <div class="row">
     <div class="container">
-      <div class="col s6 m12 l6">
+      <div class="col s12 m12 l6">
         <img src="{% static '/img/extract.png' %}" width="100%" height="100%" />
       </div>
-      <div class="col s6 m12 l6 flow-text">
+      <div class="col s12 m12 l6 flow-text">
       <b><p>Get best data</p></b>
       <p style="font-size: 20px">With loads of data on various site we provide the best data on this platform according to your need. This include providing reliable source of information with links to justify that its true.</p>
       <a href = "#">Learn more about this ></a>
@@ -41,13 +41,14 @@
     </div>
 <div class="row">
         <div class="container">
-      <div class="col s6 m12 l6 flow-text">
+      <div class="col s12 m12 l6 flow-text">
       <b><p>Save time while reading</p></b>
       <p style="font-size: 20px">On one click get all the data in front of you. For any problem get answer with click and interactive feature you can read the source code easily in your desire language.</p>
       <a href = "#">Learn more about this ></a>
+      <br>
       </div>
-      <div class="col s6 m12 l6">
-      <img src="{% static '/img/time.png' %}" width="100%" height="100%" />
+      <div class="col s12 m12 l6 center">
+      <img src="{% static '/img/time.png' %}" width="70%" height="70%" />
       </div>
     </div>
     </div>
@@ -58,7 +59,7 @@
     </div>
 <div class="row">
         <div class="container">
-      <div class="col s6 m12 l12 flow-text center">
+      <div class="col s12 m12 l12 flow-text center">
       <b><p>Read blogs on the go</p></b>
       <p style="font-size: 20px">With many sources we provide famous blogs which are worth reading. Rather than loading various tabs we provide feature to read blog on the same page with iframe</p>
       <a href = "#">Learn more about this ></a>
