#26 #19 Solved and content changed

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -10,6 +10,9 @@
 
     <!-- JS Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/prettify.js"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+
     <script src="{% static 'js/materialize.js' %}"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
@@ -19,8 +22,20 @@
     <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdn.rawgit.com/google/code-prettify/master/loader/prettify.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+<style>
+li.L0,
+li.L1,
+li.L2,
+li.L3,
+li.L5,
+li.L6,
+li.L7,
+li.L8 { list-style-type: decimal !important }
+</style>
 
 </head>
 
