--- a/home/templates/home/main_home.html
+++ b/home/templates/home/main_home.html
@@ -10,8 +10,8 @@
     <div class="row black" style="color: white; padding-bottom: 50px;">
         <div style="padding: 5%;">
             <div class="col s12 m12 l6 flow-text">
-                <b><p style="font-size: 42px;">Built to encourage reading</p></b>
-                <p style="font-size: 24px;">Mythical Learning provides a platform for developers to read source code according to their choice in quick and in efficient way. With our site anyone can learn, develop and its all free.</p>
+                <b><p style="font-size: 42px;">Exercise your brain by reading code</p></b>
+                <p style="font-size: 24px;">Mythical Learning provides a platform for developers to read source code, blog according to their choice in quick and in efficient way. With our site anyone can learn, develop and its all free.</p>
             </div>
             <div class="col s6 flow-text hide-on-med-and-down left">
                 <center><p style="font-size: 32px;">Still Developing !</p></center>
