--- a/scrapper/templates/scrapper/problem.html
+++ b/scrapper/templates/scrapper/problem.html
@@ -3,6 +3,7 @@
 <div class="row">
 <div class="s6 m12 l6">
 <p class="flow-text" style="font-size: 42px;">Problems</p>
+<xmp class="prettyprint" id="out" hidden></xmp>
 </div>
 <div class="s6 m12 l6 right">
 <a class="{{ c }} tooltipped" id="save-lang1" data-position="top" data-delay="50" data-tooltip="C Language"><i class="material-icons">code</i></a>
@@ -10,6 +11,7 @@
 <a class="{{ java }} tooltipped" id="save-lang3" data-position="top" data-delay="50" data-tooltip="Java Language"><i class="material-icons">code</i></a>
 <a class="{{ python }} tooltipped" id="save-lang4" data-position="top" data-delay="50" data-tooltip="Python Language"><i class="material-icons">code</i></a>
 <br>
+<p style="font-size: 14px" class="flow-text">Choose your language</p>
 <a href = "#" id="targe"><p class="right flow-text" style="font-size: 14px;">help?</p></a>
 
   <div class="tap-target flow-text blue" data-activates="save-lang1">
@@ -29,7 +31,7 @@
 </div>
 <a class="waves-effect waves-light btn get-link">Get</a>
 <hr>
-<p id="problemq" style="font-size: 12px;"><h3 class="flow-text">Get your first question ...</h3></p>
+<p id="problemq" style="font-size: 12px;"><h3 class="flow-text">Get your first question ... (if you don't see any question then again press button)</h3></p>
 <p id="problemlink"></p>
 <div id="problema" style="display: none;">
 <p class="flow-text" style="font-size: 42px;">Answers <a class="btn btn-floating btn-large pulse red loadd" id="save-lang4" style="display: none;" data-position="top" data-delay="50" data-tooltip="Loading ..."><i class="material-icons">swap_vertical_circle</i></a></p>
