Modify blog page

--- a/scrapper/templates/scrapper/blog.html
+++ b/scrapper/templates/scrapper/blog.html
@@ -44,8 +44,28 @@
       </div>
     </div>
   </div>
+
+
+
 </div>
 
+<center>
+<br><br>
+    <div class="preloader-wrapper large active" style="display: none;" id="preload">
+    <div class="spinner-layer spinner-green-only">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </div>
+<div style="padding: 20px;" id="more-button" hidden>
+	<a class="btn get-blog">More</a>
+</div>
+  </center>
 </center>
 
 {% endblock %}
