[CF-2]: New idea implemented #31

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -73,6 +73,7 @@ li.L8 { list-style-type: decimal !important }
                <img src="{% static '/img/mythical-large.png' %}" height="50px" width="40px" style="padding-top:8px;"/>
             </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="/">Home</li>
             <li><a href="/about">About</a></li>
             <li><a href="/faq">FAQ</a></li>
             {% if user.is_authenticated %}
