--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -14,7 +14,7 @@
               <p><b>Description:</b><br>Questions will be picked randomly from codeforces problemset and will be viewed to you. At each question you need to predict the code or you can post your answer on their main website. After that to view answer you need to click one button with proper settings and you will be viewed some best answer among thousands of answers.</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="/temple/cpp" class="btn blue-grey">Link ></a>
             </div>
           </div>
           </div>
@@ -30,7 +30,7 @@
               <p><b>Description:</b><br>Temple consist of 2 sections which are Problems and Blog. Problems provide random problem from CodeChef site and answers for 4 languages. Blog provide random blog with one click and provide bookmark feature.</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="/temple" class="btn red">Link ></a>
             </div>
           </div>
           </div>
