[CF-3]: #31 cpp questions fetcher made

--- a/scrapper/templates/scrapper/cpp.html
+++ b/scrapper/templates/scrapper/cpp.html
@@ -1,3 +1,8 @@
-{% extends 'base.html' %} {% block pagecontent %}
+{% extends 'base.html' %} {% block largepagecontent %}
+<div class="container flow-text">
 <p>Hello, World</p>
+<a class="cfgetlink btn">Get</a>
+<div id="problem-page">
+</div>
+</div>
 {% endblock %}
