[CF-4]: #31 Questions are viewed successfully

--- a/scrapper/templates/scrapper/cpp.html
+++ b/scrapper/templates/scrapper/cpp.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block largepagecontent %}
-<div class="container flow-text">
+<div class="flow-text" style="padding: 5%;">
 <p>Hello, World</p>
 <a class="cfgetlink btn">Get</a>
 <div id="problem-page">
