[CF-5]: Answer can viwed one at a time

--- a/home/templates/home/main_home.html
+++ b/home/templates/home/main_home.html
@@ -65,6 +65,20 @@
       <a href = "#">Learn more about this ></a>
       </div>
     </div>
+    </div>            <div class="container">
+    <br>
+    <br>
+    <hr><br><br>    
+    </div>
+
+<div class="row">
+        <div class="container">
+      <div class="col s12 m12 l12 flow-text center">
+      <b><p>Get many famous courses with Codeforces Dataset</p></b>
+      <p style="font-size: 20px">While solving problems on some competitive programming we might get stuck to the problem and want to see some expert answers, so here we provide you the best answer among thousands of answers sorted by their rating and you can view each of them in just one click at a time</p>
+      <a href = "#">Learn more about this ></a>
+      </div>
+    </div>
     </div>
 
 
