Organize question asked in cf

--- a/scrapper/templates/scrapper/cpp.html
+++ b/scrapper/templates/scrapper/cpp.html
@@ -3,7 +3,9 @@
 <div class="row">
 <div class="col s12 m3">
 <p>Get started by pressing this button</p>
-<a class="cfgetlink btn">Get</a>
+<a class="cfgetnicelink btn">Get</a>
+<br>
+<a class="cfgetlink btn green">I am Feeling Lucky</a>
 </div>
 <div class="col s12 m8">
 <div class="difficulty-A right card" style="border:15px solid #4caf50;padding: 40px;">
@@ -53,7 +55,7 @@
 
 <hr>
 <div id="problem-answer" style="font-size: 14px;display: none;">
-
+<a class="cfgetanswer btn">Get</a>
 <div id="problemanswer"></div>
 <div class="s6 m12 l6 right">
 <a class="{{ A }} tooltipped" id="save-rating1" data-position="top" data-delay="50" data-tooltip="Easy"><i class="material-icons">code</i></a>
