Organized question with models (testing)

--- a/scrapper/templates/scrapper/cpp.html
+++ b/scrapper/templates/scrapper/cpp.html
@@ -10,22 +10,22 @@
 <div class="col s12 m8">
 <div class="difficulty-A right card" style="border:15px solid #4caf50;padding: 40px;">
 	 <h1 class = "center" >A</h1>
-	 <a class="btn-floating halfway-fab waves-effect waves-light green right btn-large"><i class="material-icons">add</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light green right btn-large cfdone1" id = "cfdone1" style="display: none;"><i class="material-icons">done</i></a>
 
 </div>
 <div class="difficulty-B right card" style="border:15px solid #ffeb3b;padding: 40px;">
 	 <h1 class = "center" >B</h1>
-	 <a class="btn-floating halfway-fab waves-effect waves-light yellow right btn-large"><i class="material-icons">add</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light yellow right btn-large cfdone2" id="cfdone2" style="display: none;"><i class="material-icons">done</i></a>
 
 </div>
 <div class="difficulty-C right card" style="border:15px solid #ff9800;padding: 40px;">
 	 <h1 class = "center" >C</h1>
-	 <a class="btn-floating halfway-fab waves-effect waves-light orange right btn-large"><i class="material-icons">add</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light orange right btn-large cfdone3" id="cfdone3" style="display: none;"><i class="material-icons">done</i></a>
 
 </div>
 <div class="difficulty-D right card" style="border:15px solid #f44336;padding: 40px;">
 	 <h1 class = "center" >D+</h1>
-	 <a class="btn-floating halfway-fab waves-effect waves-light red right btn-large"><i class="material-icons">add</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light red right btn-large cfdone4" id="cfdone4" style="display: none;"><i class="material-icons">done</i></a>
 
 </div>
 
