--- a/scrapper/templates/scrapper/cpp.html
+++ b/scrapper/templates/scrapper/cpp.html
@@ -1,31 +1,38 @@
 {% extends 'base.html' %} {% block largepagecontent %}
 <div style="padding: 5%;">
 <div class="row">
-<div class="col s12 m3">
+<div class="col s12 m3 center">
 <p>Get started by pressing this button</p>
 <a class="cfgetnicelink btn">Get</a>
 <br>
 <a class="cfgetlink btn green">I am Feeling Lucky</a>
+<br>
+<a class="center" style="color: black" href="#" id="cfreload"><i class="material-icons medium">loop</i></a>
 </div>
-<div class="col s12 m8">
-<div class="difficulty-A right card" style="border:15px solid #4caf50;padding: 40px;">
-	 <h1 class = "center" >A</h1>
+<div class="col s12 m8 l8 center" id="difficulty">
+<h3 data="A" class = "A" id="cfcheck">Choose your difficulty</h3>
+<div class="difficulty-A right card" style="border:15px solid #4caf50;padding: 4%;">
+	 <h4 class = "center" >A</h4>
 	 <a class="btn-floating halfway-fab waves-effect waves-light green right btn-large cfdone1" id = "cfdone1" style="display: none;"><i class="material-icons">done</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light green right btn-large cfdone1" id = "cfchoose1" data="A"><i class="material-icons">add</i></a>
 
 </div>
-<div class="difficulty-B right card" style="border:15px solid #ffeb3b;padding: 40px;">
-	 <h1 class = "center" >B</h1>
+<div class="difficulty-B right card" style="border:15px solid #ffeb3b;padding: 4%;">
+	 <h4 class = "center" >B</h4>
 	 <a class="btn-floating halfway-fab waves-effect waves-light yellow right btn-large cfdone2" id="cfdone2" style="display: none;"><i class="material-icons">done</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light yellow right btn-large cfdone1" id = "cfchoose2" data="B"><i class="material-icons">add</i></a>
 
 </div>
-<div class="difficulty-C right card" style="border:15px solid #ff9800;padding: 40px;">
-	 <h1 class = "center" >C</h1>
+<div class="difficulty-C right card" style="border:15px solid #ff9800;padding: 4%;">
+	 <h4 class = "center" >C</h4>
 	 <a class="btn-floating halfway-fab waves-effect waves-light orange right btn-large cfdone3" id="cfdone3" style="display: none;"><i class="material-icons">done</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light orange right btn-large cfdone1" id = "cfchoose3" data="C"><i class="material-icons">add</i></a>
 
 </div>
-<div class="difficulty-D right card" style="border:15px solid #f44336;padding: 40px;">
-	 <h1 class = "center" >D+</h1>
+<div class="difficulty-D right card" style="border:15px solid #f44336;padding: 4%;">
+	 <h4 class = "center" >D+</h4>
 	 <a class="btn-floating halfway-fab waves-effect waves-light red right btn-large cfdone4" id="cfdone4" style="display: none;"><i class="material-icons">done</i></a>
+	 <a class="btn-floating halfway-fab waves-effect waves-light red right btn-large cfdone1" id = "cfchoose4" data="D"><i class="material-icons">add</i></a>
 
 </div>
 
@@ -40,6 +47,9 @@
     <div class="modal-content">
       <h4>Question Ratings</h4>
       <p>Each question comprise of various ratings and ratings are set on the level of difficulty it possess. A being the easiest one and D, E, F are the hardest one.</p>
+      <p>For this course there are 2 options available. At first you can choose any random question or you can start your course in linear way.</p>
+      <p>While picking any question you can set the rating by clicking on add button. Also in linear mode course if you have done with that question you can proceed by double clicking on add button.</p>
+      <p>Linear mode will move as 1A, 2A, 3A ... and also if you choose B then 1B, 2B ... etc.</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
