Bug related data of cf

--- a/scrapper/templates/scrapper/cpp.html
+++ b/scrapper/templates/scrapper/cpp.html
@@ -66,8 +66,7 @@
 <hr>
 <div id="problem-answer" style="font-size: 14px;display: none;">
 <a class="cfgetanswer btn">Get</a>
-<div id="problemanswer"></div>
-<div class="s6 m12 l6 right">
+<div class="right">
 <a class="{{ A }} tooltipped" id="save-rating1" data-position="top" data-delay="50" data-tooltip="Easy"><i class="material-icons">code</i></a>
 <a class="{{ B }} tooltipped" id="save-rating2" data-position="top" data-delay="50" data-tooltip="Medium"><i class="material-icons">code</i></a>
 <a class="{{ C }} tooltipped" id="save-rating3" data-position="top" data-delay="50" data-tooltip="Hard"><i class="material-icons">code</i></a>
@@ -85,6 +84,7 @@
     </div>
   </div>
 </div>
+<div id="problemanswer"></div>
 
 
 
