--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -18,6 +18,7 @@
     <script src="{% static 'js/main.js' %}"></script>
 
     <!-- CSS Files -->
+    <link rel="shortcut icon" type="image/png" href="{% static '/img/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css" />
